
add_executable(main_test main_test.cpp)
target_link_libraries(main_test linux_homework)

add_executable(test_case_1 test_case_1.cpp)
target_link_libraries(test_case_1 linux_homework)

add_executable(test_case_2 test_case_2.cpp)
target_link_libraries(test_case_2 linux_homework)

add_executable(test_case_3 test_case_3.cpp)
target_link_libraries(test_case_3 linux_homework)

add_executable(test_case_4 test_case_4.cpp)
target_link_libraries(test_case_4 linux_homework)

add_executable(test_case_5 test_case_5.cpp)
target_link_libraries(test_case_5 linux_homework)